<resources>
    <string name="app_name">GeoMusicAndroidClient</string>
    <integer name="com_vk_sdk_AppId">5793896</integer>


    <string name="rememberLogin">Remember me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="IS_AUTHORIZED">is_authorized</string>

    <string name="see_all">See All</string>

    <string name="manage_published">Manage Published</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="playlists">Playlists</string>
    <string name="select_categories">Select categories</string>
    <string name="long_latin" > </string>

</resources>
