<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_account_circle_black_48dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintVertical_bias="0.428" />


    <EditText
        android:id="@+id/account_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        tools:layout_conversion_absoluteX="149dp"
        tools:layout_conversion_absoluteY="65dp"
        tools:layout_conversion_absoluteWidth="213dp"
        tools:layout_conversion_absoluteHeight="41dp"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/account_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        tools:layout_conversion_absoluteX="149dp"
        tools:layout_conversion_absoluteY="107dp"
        tools:layout_conversion_absoluteWidth="213dp"
        tools:layout_conversion_absoluteHeight="41dp"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/account_userName" />


    <Button
        android:id="@+id/account_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/swift_shape_button"
        android:text="@string/confirm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/account_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/swift_shape_button"
        android:text="@string/change_password"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/account_confirm"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/account_selectCategories"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/swift_shape_button"
        android:text="@string/select_categories"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/account_changePassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="191dp"
        android:orientation="horizontal" />


</android.support.constraint.ConstraintLayout>